--- a/src/app/modules/guide/components/deals/deals.component.html
+++ b/src/app/modules/guide/components/deals/deals.component.html
@@ -2,16 +2,16 @@
     <div class="mb-3 dealtop">
         <div class="row mx-0 px-0">
             <div class="col-12 col-md-6 px-0">
-    
+
                 <div class="create-font mx-5 mb-2 text-center">Create your deals</div>
                 <div class="mx-5 text-center">Let Voila help you make your own tour package/deal according to your preferences</div>
-    
+
                 <div class="text-center my-4">
-                    <button type="button" mdbBtn [routerLink]="['/guide/guidehome/createDeal']" routerLinkActive="router-link-active"  style="background-color:#faed26;" class="btn btn-lg" mdbWavesEffect>Create Deal</button>
+                    <button type="button" mdbBtn [routerLink]="['/guide/guidehome/createDeal']" routerLinkActive="router-link-active" style="background-color:#faed26;" class="btn btn-lg" mdbWavesEffect>Create Deal</button>
                 </div>
             </div>
             <div class="col-12  col-md-6">
-                <img src="assets\images\abstract-success.png" class="img-fluid" style="height: 100%; width:100%">
+                <img src="assets\images\abstract-success.png" class="img-fluid" style="height: auto; width:100%">
             </div>
         </div>
     </div>
