--- a/src/app/shared/components/rating-modal/rating-modal.component.html
+++ b/src/app/shared/components/rating-modal/rating-modal.component.html
@@ -2,51 +2,51 @@
 </ng-template> -->
 
 <div class="modal-header">
-  <h6 class="modal-title" id="modal-basic-title">Rating And Reviews</h6>
-  <button type="button" class="close" aria-label="Close" (click)="close.emit()">
+    <h6 class="modal-title" id="modal-basic-title">Rating And Reviews</h6>
+    <button type="button" class="close" aria-label="Close" (click)="close.emit()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <div class="text-center">
-    <h5>
-     Rate Now
-    </h5>
-    <div class="row">
-      <div class="col-12 text-center">
-        <div class="text-center form-group">
-          <fieldset class="rating" >
-            <input type="radio" id="star5" name="rating" value="5" (change)="changeRating($event)"/>
-            <label class = "full" for="star5" title="Awesome - 5 stars"></label>
-            <input type="radio" id="star4half" name="rating" value="4.5" (change)="changeRating($event)" />
-            <label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
-            <input type="radio" id="star4" name="rating" value="4" (change)="changeRating($event)"/>
-            <label class = "full" for="star4" title="Pretty good - 4 stars"></label>
-            <input type="radio" id="star3half" name="rating" value="3.5" (change)="changeRating($event)"/>
-            <label class="half" for="star3half" title="Meh - 3.5 stars"></label>
-            <input type="radio" id="star3" name="rating" value="3" (change)="changeRating($event)"/>
-            <label class = "full" for="star3" title="Meh - 3 stars"></label>
-            <input type="radio" id="star2half" name="rating" value="2.5" (change)="changeRating($event)"/>
-            <label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
-            <input type="radio" id="star2" name="rating" value="2" (change)="changeRating($event)"/>
-            <label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
-            <input type="radio" id="star1half" name="rating" value="1.5" (change)="changeRating($event)"/>
-            <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
-            <input type="radio" id="star1" name="rating" value="1" (change)="changeRating($event)"/>
-            <label class = "full" for="star1" title="Sucks big time - 1 star"></label>
-            <input type="radio" id="starhalf" name="rating" value="half" (change)="changeRating($event)"/>
-            <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
-        </fieldset>
+    <div class="text-center">
+        <h5>
+            Rate Now
+        </h5>
+        <div class="row">
+            <div class="col-12 text-center">
+                <div class="text-center form-group">
+                    <fieldset class="rating">
+                        <input type="radio" id="star5" name="rating" value="5" (change)="changeRating($event)" />
+                        <label class="full" for="star5" title="Awesome - 5 stars"></label>
+                        <input type="radio" id="star4half" name="rating" value="4.5" (change)="changeRating($event)" />
+                        <label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+                        <input type="radio" id="star4" name="rating" value="4" (change)="changeRating($event)" />
+                        <label class="full" for="star4" title="Pretty good - 4 stars"></label>
+                        <input type="radio" id="star3half" name="rating" value="3.5" (change)="changeRating($event)" />
+                        <label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                        <input type="radio" id="star3" name="rating" value="3" (change)="changeRating($event)" />
+                        <label class="full" for="star3" title="Meh - 3 stars"></label>
+                        <input type="radio" id="star2half" name="rating" value="2.5" (change)="changeRating($event)" />
+                        <label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+                        <input type="radio" id="star2" name="rating" value="2" (change)="changeRating($event)" />
+                        <label class="full" for="star2" title="Kinda bad - 2 stars"></label>
+                        <input type="radio" id="star1half" name="rating" value="1.5" (change)="changeRating($event)" />
+                        <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+                        <input type="radio" id="star1" name="rating" value="1" (change)="changeRating($event)" />
+                        <label class="full" for="star1" title="Sucks big time - 1 star"></label>
+                        <input type="radio" id="starhalf" name="rating" value="half" (change)="changeRating($event)" />
+                        <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+                    </fieldset>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-  <br>
-  <p class="text-left">Reviews</p>
-  <div class="form-group">
-  <textarea class="form-control" (change)="changeText($event)" placeholder="write something here!"></textarea>
-  </div>
+    <br>
+    <p class="text-left">Reviews</p>
+    <div class="form-group">
+        <textarea class="form-control" (change)="changeText($event)" placeholder="write something here!"></textarea>
+    </div>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="completeTour(rating)">Save</button>
+    <button type="button" style="background-color:#553d67" class="btn" (click)="completeTour(rating)">Save</button>
 </div>
