--- a/src/app/modules/guide/components/create-deal/create-deal.component.html
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.html
@@ -1,119 +1,124 @@
 <div class="bg cards m-0 pt-md-5">
-  <mdb-card >
-    <mdb-card-body>
-      <mdb-card-title>
-        <h4 class="mb-3"><B>Create Deal</B></h4>
-      </mdb-card-title>
-      <mdb-card-text>
-      <form [formGroup]="dealForm">
-        <div class="row">
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form6">State</label>
-              <input type="text" id="form6" disabled formControlName="state" class="form-control">
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form7">City</label>
-              <select formControlName="city" class="form-control" class="browser-default custom-select" id="form58">
+    <mdb-card>
+        <mdb-card-body>
+            <mdb-card-title>
+                <h4 class="mb-3">
+                    <B>Create Deal</B>
+                </h4>
+            </mdb-card-title>
+            <mdb-card-text>
+                <form [formGroup]="dealForm">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form6">State</label>
+                                <input type="text" id="form6" disabled formControlName="state" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form7">City</label>
+                                <select formControlName="city" class="form-control" class="browser-default custom-select" id="form58">
                 <option value="" disabled>Select City</option>
                 <option *ngFor="let item of cityList" [value]="item.name"> {{ item?.name }}</option>
                 <small class="text-muted">May be your starting point</small>
               </select>
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form5">People Limit</label>
-              <input type="number" id="form5" formControlName="peopleLimit" placeholder="enter people limit" class="form-control">
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form6">Price Per Head</label>
-              <input type="number" id="form6" formControlName="price" placeholder="enter per head charges" class="form-control">
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form7">From</label>
-              <input type="date" id="form7" formControlName="startDate" class="form-control">
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form8">To</label>
-              <input type="date" id="form8" formControlName="endDate" class="form-control">
-            </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form9">Group Type</label>
-              <select formControlName="groupType" class="form-control" class="browser-default custom-select" id="form9">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form5">People Limit</label>
+                                <input type="number" id="form5" formControlName="peopleLimit" placeholder="enter people limit" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form6">Price Per Head</label>
+                                <input type="number" id="form6" formControlName="price" placeholder="enter per head charges" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form7">From</label>
+                                <input type="date" id="form7" formControlName="startDate" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form8">To</label>
+                                <input type="date" id="form8" formControlName="endDate" class="form-control">
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form9">Group Type</label>
+                                <select formControlName="groupType" class="form-control" class="browser-default custom-select" id="form9">
                   <option value="" disabled>Select Group type</option>
                   <option *ngFor="let item of groupType" [value]="item"> {{ item }}</option>
               </select>
-          </div>
-          </div>
-          <div class="col-6">
-            <div class="form-group">
-              <label for="form11">Group name</label>
-              <input type="text" id="form11" formControlName="groupName" placeholder="enter group name" class="form-control">
-              <small class="text-muted">This will bw your chat group name</small>
-            </div>
-          </div>
-        </div>
-      </form>
-      <h6 class="text-black"><B>Tour Places</B></h6>
-      <div class="row">
-          <div class="col-6 col-lg-5">
-            <div class="form-group">
-              <label for="form18">Place</label>
-              <input type="text" id="form18" [(ngModel)]="place" placeholder="enter place" class="form-control">
-            </div>
-          </div>
-          <div class="col-6 col-lg-5">
-            <div class="form-group">
-              <label for="form17">Date</label>
-              <input type="date" id="form17" [(ngModel)]="date" class="form-control">
-            </div>
-          </div>
-          <div class="col-3 col-lg-2 mt-lg-4">
-          <a mdbBtn size="sm" class="mt-2 mb-3"
-            (click)="addToPlacesList()" style="background:rgba(255, 255, 255, 0.612); color:black;" mdbWavesEffect>Add</a>
-          </div>
-      </div>
-      <h6 *ngIf="placesList.length > 0" class="text-black"><B>Tour Places List</B></h6>
-      <div *ngIf="placesList.length > 0" class="row card-body pt-0 px-0 ">
-        <div class="col-md-12 table-responsive">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>Sr. No</th>
-                <th>Place</th>
-                <th>Date</th>
-                <th>Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let item of placesList; let i = index">
-                <td>{{i+1}}</td>
-                <td>{{item.place | titlecase}}</td>
-                <td>{{item.date | date: 'dd-MM-yyyy'}}</td>
-                <td>
-                  <button (click)="editPlace(item)"><mdb-icon class="edit-icon" fas icon="edit"></mdb-icon></button>
-                  <button (click)="removePlace(item)"><mdb-icon fas class="delete-icon" icon="trash-alt"></mdb-icon></button>
-                </td>
-              </tr>
-            </tbody>
-           </table>
-        </div>
-      </div>
-      </mdb-card-text>
-      <a mdbBtn [routerLink]="['/guide/guidehome/deals']" style="background:rgba(255, 255, 255, 0.612);" mdbWavesEffect>Cancel</a>
-      <a mdbBtn (click)="saveDeal()" style="background:rgba(255, 255, 255, 0.612); color: black;" mdbWavesEffect>Create</a>
-    </mdb-card-body>
-  </mdb-card>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="form-group">
+                                <label for="form11">Group name</label>
+                                <input type="text" id="form11" formControlName="groupName" placeholder="enter group name" class="form-control">
+                                <small class="text-muted">This will be your chat group name</small>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+                <h6 class="text-black">
+                    <B>Tour Places</B>
+                </h6>
+                <div class="row">
+                    <div class="col-6 col-lg-5">
+                        <div class="form-group">
+                            <label for="form18">Place</label>
+                            <input type="text" id="form18" [(ngModel)]="place" placeholder="enter place" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-6 col-lg-5">
+                        <div class="form-group">
+                            <label for="form17">Date</label>
+                            <input type="date" id="form17" [(ngModel)]="date" class="form-control">
+                        </div>
+                    </div>
+                    <div class="col-3 col-lg-2 mt-lg-4">
+                        <a mdbBtn size="sm" class="mt-2 mb-3" (click)="addToPlacesList()" color="yellow" mdbWavesEffect>Add</a>
+                    </div>
+                </div>
+                <h6 *ngIf="placesList.length > 0" class="text-black">
+                    <B>Tour Places List</B>
+                </h6>
+                <div *ngIf="placesList.length > 0" class="row card-body pt-0 px-0 ">
+                    <div class="col-md-12 table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th>Sr. No</th>
+                                    <th>Place</th>
+                                    <th>Date</th>
+                                    <th>Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let item of placesList; let i = index">
+                                    <td>{{i+1}}</td>
+                                    <td>{{item.place | titlecase}}</td>
+                                    <td>{{item.date | date: 'dd-MM-yyyy'}}</td>
+                                    <td>
+                                        <button (click)="editPlace(item)"><mdb-icon class="edit-icon" fas icon="edit"></mdb-icon></button>
+                                        <button (click)="removePlace(item)"><mdb-icon fas class="delete-icon" icon="trash-alt"></mdb-icon></button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </mdb-card-text>
+            <a mdbBtn [routerLink]="['/guide/guidehome/deals']" style="background:rgba(255, 255, 255, 0.612);" mdbWavesEffect>Cancel</a>
+            <a mdbBtn (click)="saveDeal()" style="background:rgba(255, 255, 255, 0.612); color: black;" mdbWavesEffect>Create</a>
+        </mdb-card-body>
+    </mdb-card>
 </div>
 <!-- Card -->
