--- a/src/app/shared/components/chat-room/chat-room.component.html
+++ b/src/app/shared/components/chat-room/chat-room.component.html
@@ -6,7 +6,7 @@
         <div *ngIf="userService.getRole() === 'tourist'" class="col-12 col-lg-9">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #7bd3c3 0%,rgb(252, 255, 114) 100%); ">
+                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-12">
                             <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{roomName | titlecase}} (Group)</b></span>
@@ -46,7 +46,7 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </div>
                     <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn mx-0 my-0 px-1 font-size" style="background:#7bd3c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                        <button type="submit" class="form-control btn mx-0 my-0 px-1 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                     </div>
                 </div>
             </form>
@@ -55,7 +55,7 @@
         <div *ngIf="userService.getRole() === 'guide'" class="col">
             <div class="row">
                 <div class="col-sm-12 ">
-                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #7bd3c3 0%,rgb(252, 255, 114) 100%); ">
+                    <div class="row py-3 " style="background-image: linear-gradient(322deg, #22c1c3 0%,rgb(252, 255, 114) 100%); ">
                         <div class="col-12">
                             <span class="heading-size"><b><mdb-icon (click)="back()" fas icon="arrow-left"></mdb-icon>&nbsp;
                                 {{roomName | titlecase}} (Group)</b></span>
@@ -95,7 +95,7 @@
                         <input type="text" name="message" [(ngModel)]="message" class="form-control" placeholder="Type a message">
                     </div>
                     <div class="col-3 col-md-2 col-lg-2 px-0 white-text">
-                        <button type="submit" class="form-control btn px-1 mx-0 my-0 font-size" style="background:#7bd3c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
+                        <button type="submit" class="form-control btn px-1 mx-0 my-0 font-size" style="background:#22c1c3;" (click)="sendMessage()">Send&nbsp;<mdb-icon fas icon="paper-plane"></mdb-icon></button>
                     </div>
                 </div>
             </form>
