--- a/src/app/modules/tourists/components/requests/requests.component.html
+++ b/src/app/modules/tourists/components/requests/requests.component.html
@@ -174,11 +174,7 @@
             <button type="button" mdbBtn color="secondary" size="sm" class="waves-light btn-block" (click)="d('Cross click')" mdbWavesEffect>Close&nbsp;<mdb-icon fas icon="ban"></mdb-icon></button>
         </div>
         <div class="col">
-<<<<<<< HEAD
-            <button mdbBtn class="btn-block waves-light" type="button" size="sm" color="pink" (click)="cancelRequest(content)" mdbWavesEffect>Cancel Request</button>
-=======
-            <button mdbBtn class="btn-block waves-light" type="button" size="sm" color="danger" (click)="cancelRequest()" mdbWavesEffect>Cancel Request</button>
->>>>>>> origin/vidhi
+            <button mdbBtn class="btn-block waves-light" type="button" size="sm" color="danger" (click)="cancelRequest(content)" mdbWavesEffect>Cancel Request</button>
         </div>
     </div>
 </ng-template>
