--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -17,7 +17,7 @@
 </div>
 <div class="parallax p2">
 </div>
-<div class="my-5 mx-3 text-center">
+<div class="my-3 my-md-5 mx-3 text-center">
     <h1 class="pb-4"><b>Perks of being a Voila Guide</b></h1>
     <div class="row">
         <div class="col-md-4 px-4 shows">
@@ -55,7 +55,7 @@
 
 <div class="parallax p3">
 </div>
-<div class="my-5 mx-3 text-center">
+<div class="my-3 my-md-5 mx-3 text-center">
     <h1 class="pb-4"><b>What Voila offers you</b></h1>
     <div class="row">
         <div class="col-md-4 px-4 shows">
@@ -94,7 +94,7 @@
     </div>
 </div>
 
-<div class="my-5 text-center bgclass white-text getStartedBlock p-5" >
+<div class="my-5 text-center bgclass white-text getStartedBlock p-5">
     <h1 class="py-4"><b>Let's get started!</b></h1>
     <div class="row pb-3">
         <div class=" col-12 col-md-4 px-3">
@@ -121,7 +121,7 @@
     <button mdbBtn type="button" (click)="navigateToRegisterPage()" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Register as a Voila Guide</button>
 </div>
 
-<div class="my-5 mx-3 text-center">
+<div class="my-3 my-md-5 mx-3 text-center">
     <h1 class="pb-4"><b>Your Voila options</b></h1>
     <div class="row">
         <div class="col-md-4 px-4 shows">
