--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -42,7 +42,7 @@ a:hover {
 }
 
 .dropdown-menu .active {
-    color: #ba9dcf !important;
+    color: #22c1c3 !important;
     font-weight: bold;
 }
 
@@ -67,7 +67,7 @@ a:hover {
 }
 
 .nav-item .active {
-    color: #ba9dcf !important;
+    color: #22c1c3 !important;
     // font-weight: bold;
 }
 
